# EiLiAs

./: CMakeLists.txt  README.md
src/: main.cpp
src/Layer/: Layer.cpp  Layer.h
src/Learn/: Learn.cpp  Learn.h
src/Network/: Network.cpp  Network.h
src/Neuron/: DataStructures.h  Neuron.cpp  Neuron.h  NeuronActivators.cpp  NeuronActivators.h  NeuronConfigurator.cpp  NeuronConfigurator.h
